# libli

./: .env.example  .gitignore  README.md  conftest.py  differences.md  manage.py  pyproject.toml
accounts/: adapters.py  admin.py  apps.py  emails.py  forms.py  invitations.py  models.py  provisioning.py  services.py  signals.py  sso_config.py  urls.py  views.py  views_manage.py
config/: urls.py  views.py
core/: apps.py  collation.py  context_processors.py  forms.py  help.py  middleware.py  services.py  signals.py  urls.py  views.py  views_help.py
courses/: access.py  admin.py  apps.py  builder.py  color_bands.py  constants.py  dnd.py  element_forms.py  embed.py  exporters.py  fields.py  fillblank.py  filltable.py  forms.py  geogebra.py  gradebook.py  guessnumber.py  htmlsandbox.py  keywords.py  marking.py  media.py  models.py  ordering.py  quiz.py  review.py  rollups.py  sanitize.py  scoring.py  signals.py  slideshow.py  state.py  structure_backfill.py  switchgate.py  switchgrid.py  urls.py  validators.py  video_url.py  views.py  views_analytics.py  views_export.py  (+5 more)
docs/: deployment-course-transfer.md  design-language.md  local-development.md  packt-review.md  roadmap.md  view-inventory.md
grouping/: admin.py  apps.py  forms.py  models.py  scoping.py  services.py  signals.py  urls.py  views.py
institution/: admin.py  forms.py  models.py  roles.py  urls.py  validators.py  views_manage.py  views_setup.py
integrations/: delivery.py  docs.py  flush.py  forms.py  models.py  services.py  urls.py  views.py
notes/: forms.py  models.py  rendering.py  services.py  urls.py  views.py
notifications/: emails.py  forms.py  models.py  recipients.py  retention.py  services.py  urls.py  views.py
tags/: models.py  rendering.py  services.py  urls.py  views.py
templates/: 403.html  404.html  500.html  _groups_tabs.html  _tags_notes_tabs.html  base.html  home.html
tests/: _sso.py  capture_help_screenshots.py  (+407 more)
(+843 files in other folders)
