[project]
name = "libli"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<5.3",
    "django-allauth[socialaccount]>=65.0,<66.0",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "djangorestframework>=3.17.1",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.2,<4.0",
    "whitenoise>=6.12.0",
    "nh3>=0.2.18",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "pytest-playwright>=0.5.0",
    "ruff>=0.15.17",
]

[tool.ruff]
target-version = "py313"
extend-exclude = ["*/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106", "S107"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
addopts = "-q -m 'not e2e'"
markers = ["e2e: browser end-to-end tests (excluded by default; run with -m e2e)"]
